--- a/mobile/src/main/res/layout/app_bar_main.xml
+++ b/mobile/src/main/res/layout/app_bar_main.xml
@@ -38,6 +38,7 @@
 
     </ScrollView>
 
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -45,5 +46,14 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:elevation="@dimen/fab_elevation" />
+
+    <LinearLayout
+        android:id="@+id/modalView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/modalBg"
+        android:orientation="horizontal"
+        android:visibility="gone" />
+
 
 </android.support.design.widget.CoordinatorLayout>
