--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="darkGray">#555</color>
     <color name="black">#000</color>
     <color name="black_overlay">#66000000</color>
+    <color name="modalBg">#AACCCCCC</color>
 </resources>
