--- a/mobile/src/main/res/layout/view_roler_master_card.xml
+++ b/mobile/src/main/res/layout/view_roler_master_card.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="@string/lorem_small"
+                android:text=" "
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -32,15 +31,13 @@
 
                 <ImageView
                     android:id="@+id/image_card_view"
-                    style="@style/ProjectCardViewImage"
-                    android:layout_gravity="center|top"
-                    app:srcCompat="@drawable/image_area_alpha" />
+                    style="@style/ProjectCardViewImage" />
 
                 <TextView
                     android:id="@+id/descript_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/lorem_large" />
+                    android:text=" " />
 
             </LinearLayout>
         </LinearLayout>
