--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -190,5 +190,7 @@
         <item name="android:layout_height">80dp</item>
         <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_gravity">center|top</item>
+        <item name="android:scaleType">centerCrop</item>
     </style>
 </resources>
