--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="black">#000</color>
     <color name="black_overlay">#66000000</color>
     <color name="modalBg">#AACCCCCC</color>
+    <color name="alertDialogError">#99BB0000</color>
+    <color name="alertDialogInfo">#990077BB</color>
 </resources>
