--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -23,5 +23,10 @@
 
     <dimen name="cardview_elevation">2dp</dimen>
     <dimen name="cardview_shadow_text">15dp</dimen>
+
     <dimen name="snackbar_icon_padding">10dp</dimen>
+
+    <dimen name="alert_dialog_padding">10dp</dimen>
+    <dimen name="alert_dialog_title_padding">5dp</dimen>
+    <dimen name="alert_dialog_title_size">22sp</dimen>
 </resources>
