--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -96,6 +96,13 @@
         <item name="android:layout_marginBottom">10dp</item>
     </style>
 
+    <style name="ButtonWithoutBackground" parent="Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="ButtonLink" parent="TextSizeSimple">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">40dp</item>
