--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -13,5 +13,13 @@
         <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 
+    <style name="ButtonWithoutBackground" parent="Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
 
 </resources>
