--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -6,14 +6,15 @@
     <color name="colorPrimary">#08606a</color>
     <color name="colorAccent">#82408c</color>
     <color name="white">#FFFFFF</color>
+    <color name="whiteAlpha">#33FFFFFF</color>
     <color name="whiteGray">#FEFEFE</color>
     <color name="clearGray">#DDD</color>
     <color name="lightGray">#AAA</color>
     <color name="gray">#777</color>
     <color name="darkGray">#555</color>
     <color name="black">#000</color>
-    <color name="black_overlay">#66000000</color>
+    <color name="blackOverlay">#66000000</color>
     <color name="modalBg">#AACCCCCC</color>
     <color name="alertDialogError">#99BB0000</color>
-    <color name="alertDialogInfo">#990077BB</color>
+    <color name="alertDialogInfo">#9908606a</color>
 </resources>
