--- a/mobile/src/main/res/layout/fragment_settings.xml
+++ b/mobile/src/main/res/layout/fragment_settings.xml
@@ -19,8 +19,8 @@
             android:id="@+id/optionNotificationAutologin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:subtitleBooleanSettings="@string/settings_notification_autologin"
-            app:titleBooleanSettings="@string/settings_notification_title_autologin" />
+            app:subtitleBooleanSettings="@string/settings_autologin"
+            app:titleBooleanSettings="@string/settings_title_autologin" />
 
         <com.olivadevelop.rolermaster.tools.layouts.BooleanSettingsView
             android:id="@+id/optionExportPdf"
@@ -28,6 +28,13 @@
             android:layout_height="wrap_content"
             app:subtitleBooleanSettings="@string/settings_export_pdf_false"
             app:titleBooleanSettings="@string/settings_title_export_pdf" />
+
+        <com.olivadevelop.rolermaster.tools.layouts.BooleanSettingsView
+            android:id="@+id/optionNotificationApp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:subtitleBooleanSettings="@string/settings_notification_app"
+            app:titleBooleanSettings="@string/settings_notification_title_app" />
 
         <com.olivadevelop.rolermaster.tools.layouts.BooleanSettingsView
             android:id="@+id/optionNotificationMail"
