--- a/mobile/src/main/res/values/dimens.xml
+++ b/mobile/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_elevation">5dp</dimen>
 
+    <dimen name="common_app_text">16sp</dimen>
+
     <dimen name="fragment_title_text">24sp</dimen>
     <dimen name="fragment_title_margin_top">20dp</dimen>
     <dimen name="fragment_title_margin_btm">5dp</dimen>
